# facestream

./: README.md  pyproject.toml
src/facestream/: __init__.py  constants.py  faceswap.py  main.py  track.py
web/: index.html
